Impact section added

--- a/index.html
+++ b/index.html
@@ -95,7 +95,30 @@ generations.</p>
             </div>
           </section>
 
-          
+          <!-- Impact section -->
+           <section class="bg-[#CFF0DC] mt-[100px] p-5">
+            <h2 class="font-bold text-[20px] pt-10 text-gray-800 text-center">Our Impact</h2>
+            <div class="mt-10 flex justify-evenly">
+              <button class="btn btn-soft btn-primary px-[70px] py-[40px] bg-white rounded-lg">
+                <div>
+                  <h3 class="font-semibold text-[20px] text-green-800">500k+</h3>
+                <p class="text-gray-800">Tree planted</p>
+                </div>
+              </button>
+              <button class="btn btn-soft btn-primary px-[70px] py-[40px] bg-white rounded-lg">
+                <div>
+                  <h3 class="font-semibold text-[20px] text-green-800">120+</h3>
+                <p class="text-gray-800">Communuties Involved</p>
+                </div>
+              </button>
+              <button class="btn btn-soft btn-primary px-[70px] py-[40px] bg-white rounded-lg">
+                <div>
+                  <h3 class="font-semibold text-[20px] text-green-800">30+</h3>
+                <p class="text-gray-800">Country Reached</p>
+                </div>
+              </button>
+            </div>
+           </section>
     </main>
 
     <!-- Script JS -->
