--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
   <div class="navbar-center hidden lg:flex">
     <ul class="menu menu-horizontal px-1 text-white">
-      <li><a>About</a></li>
+      <li><a>About US</a></li>
       <li><a>Gallery</a></li>
       <li><a>Plant a tree</a></li>
       <li>
